@@ -1,3 +1,8 @@
+2000-03-17  Per Bothner  <per@bothner.com>
+
+	* ClassMemberConstraint.java (define):  Sigh.  Put in some kludge
+	for languages with dual separate namespaces.
+
 2000-02-27  Per Bothner  <per@bothner.com>
 
 	* ClassMemberConstraint.java (define):  Since kawa.lang.Syntax now
